# pleiotropy

./: .gitignore  README.md  coverage.xml  pyproject.toml  tox.ini
.github/workflows/: build.yaml  publish.yaml
pleiotropy/: run_action.py
tests/: test_pleiotropy.py
