[tool.poetry]
name = "pleiotropy"
version = "0.1.0"
description = ""
authors = ["jlikhuva <jlikhuva@alumni.stanford.edu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
